# blivedm_rs-demo

./: Cargo.toml  README.md  build.rs
src/: data.rs  live.rs  main.rs
src/data/: database.rs  event_logger.rs  logger.rs
src/live/: credential.rs  message.rs
src/live/proto/: INTERACT_WORD_V2.proto
