[package]
name = "blivedm_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
client = { git = "https://github.com/Mufanc/blivedm_rs", branch = "statistics" }
directories = "6.0"
futures-channel = "0.3"
futures-util = "0.3"
log = "0.4"
once_cell = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
